etc-envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: svc_local }
          http_filters:
          - name: envoy.filters.http.router
          use_remote_address: true # XFF header をつける。default は false: transparent mode。
      # Lua script で XFF を処理する例
      # https://blog.opstree.com/2020/05/27/ip-whitelisting-using-istio-policy-on-kubernetes-microservices/
      # - listenerMatch:
      #     portNumber: 443
      #     listenerType: ANY
      #   filterName: envoy.lua
      #   filterType: HTTP
      #   filterConfig:
      #     inlineCode: |
      #       function envoy_on_request(request_handle)
      #         local xff_header = request_handle:headers():get("X-Forwarded-For")
      #         local first_ip = string.gmatch(xff_header, "(%d+.%d+.%d+.%d+)")();
      #         request_handle:headers():add("x-client-ip", first_ip);
      #       end
  clusters:
  - name: svc_local
    connect_timeout: 0.25s
    # type: STATIC # when use ip address
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: svc_local
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nginx-proxy
                port_value: 8000
